--- a/index.html
+++ b/index.html
@@ -3,20 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | For My Love</title>
-  <link rel="stylesheet" href="css/login.css">
+  <title>Login</title>
+  <style>
+    body {
+      background-color: #800080;
+      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+    }
+    h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    .login-box {
+      background-color: rgba(255, 255, 255, 0.2);
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    input[type="text"], input[type="password"] {
+      padding: 0.5rem;
+      border: none;
+      border-radius: 0.5rem;
+      margin: 0.5rem 0;
+      width: 100%;
+    }
+    button {
+      background-color: white;
+      color: #800080;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .quotes {
+      position: absolute;
+      bottom: 20px;
+      text-align: center;
+      font-style: italic;
+      opacity: 0.8;
+    }
+    .quote {
+      display: none;
+      font-size: 1.2rem;
+    }
+  </style>
 </head>
 <body>
-  <div class="quote">"every set back is a set up for greater thing"<br>– Anais</div>
-
+  <h1>Welcome My Love 💜</h1>
   <div class="login-box">
-    <h2>Welcome, My Love 💜</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button id="login-btn">Login</button>
-    <div class="error" id="error">Wrong username or password 😢</div>
+    <form onsubmit="return login()">
+      <input type="text" id="username" placeholder="Username" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
+      <button type="submit">Login</button>
+    </form>
   </div>
 
-  <script src="js/login.js"></script>
+  <div class="quotes">
+    <div class="quote">"every set back is a set up for greater thing"<br>– Anais</div>
+    <div class="quote">"les fous ne marchent pas avec les sages"<br>– Anais</div>
+    <div class="quote">"live love laugh wicked"<br>– Anais</div>
+    <div class="quote">"we can only be wicked together"<br>– Anais</div>
+  </div>
+
+  <script>
+    const quotes = document.querySelectorAll('.quote');
+    let index = 0;
+    function showQuote() {
+      quotes.forEach(q => q.style.display = 'none');
+      quotes[index].style.display = 'block';
+      index = (index + 1) % quotes.length;
+    }
+    setInterval(showQuote, 4000);
+    showQuote();
+
+    function login() {
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+      if (username === "timmie" && password === "val2008") {
+        window.location.href = "home.html";
+        return false;
+      } else {
+        alert("Wrong username or password, my love. Try again.");
+        return false;
+      }
+    }
+  </script>
 </body>
 </html>
