--- a/gallery.html
+++ b/gallery.html
@@ -1,161 +1,63 @@
-<!-- Gallery Section -->
-<section id="photos" class="gallery-section active">
-  <div class="gallery-grid" id="imageGallery"></div>
+<section id="videos" class="py-12 px-4 md:px-12 lg:px-24">
+  <h2 class="text-3xl font-bold text-center mb-8">Our Videos</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
+    <!-- Start of Video Embeds -->
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WS8ZtqWTvRTw6Y8IIKMt_AtXS6oC9uQz/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/11c5fposZYnDasiyiun60SBoFAjJOjt4y/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1XE4_ZOgdbr5I5XEpSItJ78OifDd8cKCj/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1q1q6zrkcFaTqhCE66IZ8vhwd-gboiz7G/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Xs-UGRXewmklkrSRceQd_PPl3zVHMm0U/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Le_fATlKCTSTzYwJLJN2xSxoElXdL2mt/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1XGQ8YbLpcvW0fa7qVzGqVS-XpHp1hVp5/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1LucIRbUAnoAQgWlk4dluQOu1DGNCPcFZ/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Zikzal03gW5EA9Z20o65nxPBawy8r5nt/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1DyH5wkCTX1oq7yp1lujA55XDm6SEDTlJ/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1851daWVcVdUPo7cXdr1W4aO2WLQLKP-e/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1vrCZgSZ_1JowWr-Q2WV22yk92tEMLX9S/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1VfxBZaQ6HvYHRgr8KqnWJbEr9hvW2wm2/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1z8Tz2VRlCuK5r5UMjChnZviskusnzFgl/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1GrOmO1uHcQBBEJ3tTO7dPBveqNm5DPym/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1QkYp8bvobWMSqioCh3soWhcWFkz13y78/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1j2XsTE-ijaUmAaNeBzLEbbdKd336Rryb/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WeIOy-D1cI2lwKemNKvMZVtyOptI0MF-/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1H2kh0zvyGavA41Vf-rTc7U_tX0d5I2hw/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1FIFZ0JyKbZHaDxW4MdeubIbvTSYZAv70/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1eq_cRxyjfBpsdywkYzrDyRk1W5Mw76m8/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1tzXJTjVoofLZc52TMR71SbCOMeneDxHQ/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1tyHeaZ1CZ_UoFKRdTroX6TRjM-Np26fW/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WJlao2yJ3JZ-HmvjzWJzLllnHpobEAdb/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1saXWaJoxsemyN_ajCWrvqcTAs4uBGOsS/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/10PkpHdbVMqiqMRNhGNkRoxEJWqeQacMv/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1QWKMxdbcI7HRbmyOzbfNEBg2A5KzgDd4/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/13LekqlNpv6KjfD6jC6EF5Wu9pn2b02LQ/preview" allow="autoplay" allowfullscreen></iframe></div>
+    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1UGCUb7xPpG0C74AQh7hf5Kb1A9BOFGid/preview" allow="autoplay" allowfullscreen></iframe></div>
+  </div>
 </section>
 
-<!-- Lightbox -->
-<div class="lightbox" id="lightbox">
-  <span class="close" onclick="closeLightbox()">&times;</span>
-  <img id="lightbox-img" src="" alt="">
-  <p id="lightbox-title"></p>
-  <div class="lightbox-controls">
-    <span onclick="prevImage()">&#10094;</span>
-    <span onclick="nextImage()">&#10095;</span>
+<section id="gallery" class="py-12 px-4 md:px-12 lg:px-24">
+  <h2 class="text-3xl font-bold text-center mb-8">Our Memories</h2>
+  <div id="imageGallery" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
+    <!-- Images will be injected here by JavaScript -->
   </div>
-</div>
-
-<style>
-  .gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    gap: 20px;
-    padding: 30px;
-  }
-
-  .gallery-grid img {
-    width: 100%;
-    height: auto;
-    border-radius: 12px;
-    cursor: pointer;
-    transition: transform 0.3s;
-  }
-
-  .gallery-grid img:hover {
-    transform: scale(1.03);
-  }
-
-  .image-caption {
-    text-align: center;
-    margin-top: 5px;
-    font-size: 1rem;
-    color: white;
-  }
-
-  .lightbox {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0, 0, 0, 0.9);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 10000;
-    color: white;
-  }
-
-  .lightbox img {
-    max-width: 90%;
-    max-height: 80vh;
-    border-radius: 10px;
-  }
-
-  .lightbox p {
-    margin-top: 10px;
-    font-size: 1.2rem;
-    text-align: center;
-  }
-
-  .lightbox .close {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    font-size: 2rem;
-    cursor: pointer;
-  }
-
-  .lightbox-controls {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 30px;
-    transform: translateY(-50%);
-  }
-
-  .lightbox-controls span {
-    font-size: 2.5rem;
-    cursor: pointer;
-    user-select: none;
-  }
-</style>
+</section>
 
 <script>
-  const imageData = Array.from({ length: 58 }, (_, i) => ({
-    src: `images/pic (${i + 1}).jpg`,
-    title: `Memory ${i + 1}` // You can customize each title here
-  }));
-
-  const gallery = document.getElementById('imageGallery');
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightbox-img');
-  const lightboxTitle = document.getElementById('lightbox-title');
-
-  let currentIndex = 0;
-
-  imageData.forEach((img, index) => {
-    const container = document.createElement('div');
-
-    const image = document.createElement('img');
-    image.src = img.src;
-    image.alt = img.title;
-    image.loading = 'lazy';
-    image.onclick = () => openLightbox(index);
-
-    const caption = document.createElement('p');
-    caption.className = 'image-caption';
-    caption.textContent = img.title;
-
-    container.appendChild(image);
-    container.appendChild(caption);
-    gallery.appendChild(container);
-  });
+  const imageGallery = document.getElementById("imageGallery");
+  for (let i = 1; i <= 68; i++) {
+    imageGallery.innerHTML += `
+      <img 
+        src="images/pic (${i}).jpg" 
+        alt="Our memory ${i}" 
+        class="rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer"
+        loading="lazy"
+        onclick="openLightbox(${i})"
+      >
+    `;
+  }
 
   function openLightbox(index) {
-    currentIndex = index;
-    lightbox.style.display = 'flex';
-    updateLightbox();
+    // You can implement a lightbox viewer here if needed
+    alert(`Clicked on image ${index}`);
   }
-
-  function updateLightbox() {
-    lightboxImg.src = imageData[currentIndex].src;
-    lightboxTitle.textContent = imageData[currentIndex].title;
-  }
-
-  function closeLightbox() {
-    lightbox.style.display = 'none';
-  }
-
-  function prevImage() {
-    currentIndex = (currentIndex - 1 + imageData.length) % imageData.length;
-    updateLightbox();
-  }
-
-  function nextImage() {
-    currentIndex = (currentIndex + 1) % imageData.length;
-    updateLightbox();
-  }
-
-  // Keyboard support
-  document.addEventListener('keydown', (e) => {
-    if (e.key === "Escape") closeLightbox();
-    if (e.key === "ArrowLeft") prevImage();
-    if (e.key === "ArrowRight") nextImage();
-  });
-
-  // Click outside image to close
-  lightbox.addEventListener('click', (e) => {
-    if (e.target === lightbox) closeLightbox();
-  });
 </script>
