--- a/gallery.html
+++ b/gallery.html
@@ -1,63 +1,288 @@
-<section id="videos" class="py-12 px-4 md:px-12 lg:px-24">
-  <h2 class="text-3xl font-bold text-center mb-8">Our Videos</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Our Gallery</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #b799ff, #e0b3ff);
+      color: white;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      overflow-x: hidden;
+    }
 
-    <!-- Start of Video Embeds -->
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WS8ZtqWTvRTw6Y8IIKMt_AtXS6oC9uQz/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/11c5fposZYnDasiyiun60SBoFAjJOjt4y/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1XE4_ZOgdbr5I5XEpSItJ78OifDd8cKCj/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1q1q6zrkcFaTqhCE66IZ8vhwd-gboiz7G/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Xs-UGRXewmklkrSRceQd_PPl3zVHMm0U/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Le_fATlKCTSTzYwJLJN2xSxoElXdL2mt/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1XGQ8YbLpcvW0fa7qVzGqVS-XpHp1hVp5/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1LucIRbUAnoAQgWlk4dluQOu1DGNCPcFZ/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1Zikzal03gW5EA9Z20o65nxPBawy8r5nt/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1DyH5wkCTX1oq7yp1lujA55XDm6SEDTlJ/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1851daWVcVdUPo7cXdr1W4aO2WLQLKP-e/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1vrCZgSZ_1JowWr-Q2WV22yk92tEMLX9S/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1VfxBZaQ6HvYHRgr8KqnWJbEr9hvW2wm2/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1z8Tz2VRlCuK5r5UMjChnZviskusnzFgl/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1GrOmO1uHcQBBEJ3tTO7dPBveqNm5DPym/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1QkYp8bvobWMSqioCh3soWhcWFkz13y78/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1j2XsTE-ijaUmAaNeBzLEbbdKd336Rryb/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WeIOy-D1cI2lwKemNKvMZVtyOptI0MF-/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1H2kh0zvyGavA41Vf-rTc7U_tX0d5I2hw/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1FIFZ0JyKbZHaDxW4MdeubIbvTSYZAv70/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1eq_cRxyjfBpsdywkYzrDyRk1W5Mw76m8/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1tzXJTjVoofLZc52TMR71SbCOMeneDxHQ/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1tyHeaZ1CZ_UoFKRdTroX6TRjM-Np26fW/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1WJlao2yJ3JZ-HmvjzWJzLllnHpobEAdb/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1saXWaJoxsemyN_ajCWrvqcTAs4uBGOsS/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/10PkpHdbVMqiqMRNhGNkRoxEJWqeQacMv/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1QWKMxdbcI7HRbmyOzbfNEBg2A5KzgDd4/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/13LekqlNpv6KjfD6jC6EF5Wu9pn2b02LQ/preview" allow="autoplay" allowfullscreen></iframe></div>
-    <div class="aspect-w-16 aspect-h-9"><iframe src="https://drive.google.com/file/d/1UGCUb7xPpG0C74AQh7hf5Kb1A9BOFGid/preview" allow="autoplay" allowfullscreen></iframe></div>
+    /* Top Menu */
+    .top-menu {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      display: flex;
+      gap: 15px;
+    }
+
+    .top-menu a {
+      color: white;
+      text-decoration: none;
+      background: rgba(255,255,255,0.2);
+      padding: 8px 15px;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      transition: all 0.3s ease;
+    }
+
+    .top-menu a:hover {
+      background: rgba(255,255,255,0.4);
+    }
+
+    .gallery-header {
+      text-align: center;
+      margin: 60px 0 30px;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    }
+
+    .gallery-nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    .gallery-nav button {
+      background: rgba(255,255,255,0.2);
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: all 0.3s;
+      font-size: 1rem;
+    }
+
+    .gallery-nav button:hover {
+      background: rgba(255,255,255,0.4);
+    }
+
+    .gallery-section {
+      display: none;
+      animation: fadeIn 0.5s;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .gallery-section.active {
+      display: block;
+    }
+
+    .image-gallery, .video-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .image-gallery img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .image-gallery img:hover {
+      transform: scale(1.03);
+    }
+
+    .video-item {
+      background: rgba(255,255,255,0.1);
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    .video-item iframe {
+      width: 100%;
+      height: 200px;
+      border: none;
+      border-radius: 8px;
+    }
+
+    .video-item p {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @media (max-width: 768px) {
+      .image-gallery, .video-gallery {
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      }
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      padding-top: 60px;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.85);
+    }
+
+    .modal-content {
+      margin: auto;
+      display: block;
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 10px;
+    }
+
+    .close {
+      position: absolute;
+      top: 30px;
+      right: 40px;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .close:hover {
+      color: #bbb;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="top-menu">
+    <a href="home.html">Home</a>
+    <a href="countdown.html">Countdown</a>
+    <a href="bucketlist.html">Bucket List</a>
+    <a href="reasons.html">Why I Love You</a>
   </div>
-</section>
 
-<section id="gallery" class="py-12 px-4 md:px-12 lg:px-24">
-  <h2 class="text-3xl font-bold text-center mb-8">Our Memories</h2>
-  <div id="imageGallery" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
-    <!-- Images will be injected here by JavaScript -->
+  <header>
+    <h1 class="gallery-header">Our Memories</h1>
+    <div class="gallery-nav">
+      <button onclick="showSection('photos')">Photos</button>
+      <button onclick="showSection('videos')">Videos</button>
+    </div>
+  </header>
+
+  <!-- Photo Gallery -->
+  <section id="photos" class="gallery-section active">
+    <div class="image-gallery"></div>
+  </section>
+
+  <!-- Video Gallery -->
+  <section id="videos" class="gallery-section">
+    <div class="video-gallery" id="videoGallery"></div>
+  </section>
+
+  <!-- Modal for full-size image -->
+  <div id="imageModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <img class="modal-content" id="modalImg" />
   </div>
-</section>
 
-<script>
-  const imageGallery = document.getElementById("imageGallery");
-  for (let i = 1; i <= 68; i++) {
-    imageGallery.innerHTML += `
-      <img 
-        src="images/pic (${i}).jpg" 
-        alt="Our memory ${i}" 
-        class="rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer"
-        loading="lazy"
-        onclick="openLightbox(${i})"
-      >
-    `;
-  }
+  <script>
+    // Show Section
+    function showSection(sectionId) {
+      document.querySelectorAll('.gallery-section').forEach(section => {
+        section.classList.remove('active');
+      });
+      document.getElementById(sectionId).classList.add('active');
+    }
 
-  function openLightbox(index) {
-    // You can implement a lightbox viewer here if needed
-    alert(`Clicked on image ${index}`);
-  }
-</script>
+    // Load 68 images
+    const imageGallery = document.querySelector('.image-gallery');
+    for (let i = 1; i <= 68; i++) {
+      const img = document.createElement('img');
+      img.src = `images/pic (${i}).jpg`;
+      img.alt = `Our memory ${i}`;
+      img.loading = 'lazy';
+      img.onclick = () => openModal(img.src);
+      imageGallery.appendChild(img);
+    }
+
+    // Open Modal
+    function openModal(src) {
+      document.getElementById("imageModal").style.display = "block";
+      document.getElementById("modalImg").src = src;
+    }
+
+    // Close Modal
+    function closeModal() {
+      document.getElementById("imageModal").style.display = "none";
+    }
+
+    // Load 36 videos
+    const videoLinks = [
+      "1WS8ZtqWTvRTw6Y8IIKMt_AtXS6oC9uQz",
+      "11c5fposZYnDasiyiun60SBoFAjJOjt4y",
+      "1XE4_ZOgdbr5I5XEpSItJ78OifDd8cKCj",
+      "1q1q6zrkcFaTqhCE66IZ8vhwd-gboiz7G",
+      "1Xs-UGRXewmklkrSRceQd_PPl3zVHMm0U",
+      "1Le_fATlKCTSTzYwJLJN2xSxoElXdL2mt",
+      "1XGQ8YbLpcvW0fa7qVzGqVS-XpHp1hVp5",
+      "1LucIRbUAnoAQgWlk4dluQOu1DGNCPcFZ",
+      "1Zikzal03gW5EA9Z20o65nxPBawy8r5nt",
+      "1DyH5wkCTX1oq7yp1lujA55XDm6SEDTlJ",
+      "1851daWVcVdUPo7cXdr1W4aO2WLQLKP-e",
+      "1vrCZgSZ_1JowWr-Q2WV22yk92tEMLX9S",
+      "1VfxBZaQ6HvYHRgr8KqnWJbEr9hvW2wm2",
+      "1z8Tz2VRlCuK5r5UMjChnZviskusnzFgl",
+      "1GrOmO1uHcQBBEJ3tTO7dPBveqNm5DPym",
+      "1QkYp8bvobWMSqioCh3soWhcWFkz13y78",
+      "1j2XsTE-ijaUmAaNeBzLEbbdKd336Rryb",
+      "1WeIOy-D1cI2lwKemNKvMZVtyOptI0MF-",
+      "1H2kh0zvyGavA41Vf-rTc7U_tX0d5I2hw",
+      "1FIFZ0JyKbZHaDxW4MdeubIbvTSYZAv70",
+      "1eq_cRxyjfBpsdywkYzrDyRk1W5Mw76m8",
+      "1tzXJTjVoofLZc52TMR71SbCOMeneDxHQ",
+      "1tyHeaZ1CZ_UoFKRdTroX6TRjM-Np26fW",
+      "1WJlao2yJ3JZ-HmvjzWJzLllnHpobEAdb",
+      "1saXWaJoxsemyN_ajCWrvqcTAs4uBGOsS",
+      "10PkpHdbVMqiqMRNhGNkRoxEJWqeQacMv",
+      "1QWKMxdbcI7HRbmyOzbfNEBg2A5KzgDd4",
+      "13LekqlNpv6KjfD6jC6EF5Wu9pn2b02LQ",
+      "1UGCUb7xPpG0C74AQh7hf5Kb1A9BOFGid"
+    ];
+
+    const videoTitles = [
+      "First Kiss", "Laughs in the Dark", "Lip Sync Battle", "That Time We Got Lost",
+      "Caught on Camera", "Midnight Dance", "Birthday Surprise", "Our First Movie Night",
+      "Sunset Kisses", "Pillow Fight Chaos", "Date Night Giggles", "Love Locked Eyes",
+      "Sneaky Selfie", "Slow Dance in Silence", "Just Us Being Weird", "Late Night Cuddles",
+      "Study Date Fails", "She Made Me Blush", "Funny Voice Notes", "She Stole My Hoodie",
+      "Airport Goodbye", "Love Letters in Motion", "Our Mirror Dance", "My Sleeping Beauty",
+      "Morning Teasing", "Heartfelt Confession", "Mini Karaoke Show", "Random Hugs",
+      "The TikTok Try", "Camera Shy Cutie"
+    ];
+
+    const videoGallery = document.getElementById("videoGallery");
+    videoLinks.forEach((id, index) => {
+      const title = videoTitles[index] || `Memory ${index + 1}`;
+      videoGallery.innerHTML += `
+        <div class="video-item">
+          <iframe src="https://drive.google.com/file/d/${id}/preview" allowfullscreen></iframe>
+          <p>${title}</p>
+        </div>
+      `;
+    });
+  </script>
+</body>
+</html>
