--- a/gallery.html
+++ b/gallery.html
@@ -12,12 +12,35 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* Top Menu */
+    .top-menu {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      display: flex;
+      gap: 15px;
+    }
+
+    .top-menu a {
+      color: white;
+      text-decoration: none;
+      background: rgba(255,255,255,0.2);
+      padding: 8px 15px;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      transition: all 0.3s ease;
+    }
+
+    .top-menu a:hover {
+      background: rgba(255,255,255,0.4);
     }
 
     .gallery-header {
       text-align: center;
-      margin: 30px 0;
+      margin: 60px 0 30px;
       font-size: 2.5rem;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
     }
@@ -26,7 +49,7 @@
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     .gallery-nav button {
@@ -62,35 +85,36 @@
       gap: 20px;
     }
 
-    .image-gallery img, .video-item {
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      transition: transform 0.4s ease;
-    }
-
-    .image-gallery img:hover, .video-item:hover {
-      transform: rotate(1deg) scale(1.03);
-    }
-
     .image-gallery img {
       width: 100%;
       height: 200px;
       object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .image-gallery img:hover {
+      transform: scale(1.03);
     }
 
     .video-item {
       background: rgba(255,255,255,0.1);
-      padding: 0;
-      overflow: hidden;
+      padding: 15px;
+      border-radius: 10px;
     }
 
     .video-item iframe {
       width: 100%;
       height: 200px;
       border: none;
-      border-radius: 10px;
-      display: block;
+      border-radius: 8px;
+    }
+
+    .video-item p {
+      text-align: center;
+      margin-top: 10px;
     }
 
     @keyframes fadeIn {
@@ -104,58 +128,50 @@
       }
     }
 
-    /* Lightbox */
-    .lightbox {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0,0,0,0.8);
+    /* Modal Styles */
+    .modal {
       display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
+      position: fixed;
+      z-index: 9999;
+      padding-top: 60px;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.85);
     }
 
-    .lightbox img {
+    .modal-content {
+      margin: auto;
+      display: block;
       max-width: 90%;
-      max-height: 90%;
+      max-height: 80%;
       border-radius: 10px;
-      box-shadow: 0 0 10px white;
     }
 
-    .lightbox.active {
-      display: flex;
-    }
-
-    /* Top-right menu */
-    .top-menu {
+    .close {
       position: absolute;
-      top: 15px;
-      right: 20px;
-    }
-
-    .top-menu button {
-      background: rgba(255,255,255,0.2);
+      top: 30px;
+      right: 40px;
       color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 12px;
+      font-size: 40px;
+      font-weight: bold;
       cursor: pointer;
-      font-size: 0.9rem;
-      transition: 0.3s;
     }
 
-    .top-menu button:hover {
-      background: rgba(255,255,255,0.4);
+    .close:hover {
+      color: #bbb;
     }
   </style>
 </head>
 <body>
 
   <div class="top-menu">
-    <button onclick="window.location.href='index.html'">Menu</button>
+    <a href="home.html">Home</a>
+    <a href="countdown.html">Countdown</a>
+    <a href="bucketlist.html">Bucket List</a>
+    <a href="reasons.html">Why I Love You</a>
   </div>
 
   <header>
@@ -166,42 +182,24 @@
     </div>
   </header>
 
+  <!-- Photo Gallery -->
   <section id="photos" class="gallery-section active">
     <div class="image-gallery"></div>
   </section>
 
+  <!-- Video Gallery -->
   <section id="videos" class="gallery-section">
-    <div class="video-gallery" id="videoGallery">
-      <!-- Videos will be loaded here -->
-    </div>
+    <div class="video-gallery" id="videoGallery"></div>
   </section>
 
-  <!-- Lightbox -->
-  <div class="lightbox" id="lightbox">
-    <img src="" alt="Enlarged memory" />
+  <!-- Modal for full-size image -->
+  <div id="imageModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <img class="modal-content" id="modalImg" />
   </div>
 
   <script>
-    const imageGallery = document.querySelector('.image-gallery');
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = lightbox.querySelector('img');
-
-    for (let i = 1; i <= 68; i++) {
-      const img = document.createElement('img');
-      img.src = `images/pic (${i}).jpg`;
-      img.alt = `Memory ${i}`;
-      img.loading = 'lazy';
-      img.onclick = () => {
-        lightboxImg.src = img.src;
-        lightbox.classList.add('active');
-      };
-      imageGallery.appendChild(img);
-    }
-
-    lightbox.onclick = () => {
-      lightbox.classList.remove('active');
-    };
-
+    // Show Section
     function showSection(sectionId) {
       document.querySelectorAll('.gallery-section').forEach(section => {
         section.classList.remove('active');
@@ -209,28 +207,70 @@
       document.getElementById(sectionId).classList.add('active');
     }
 
-    // Video links
+    // Load 68 images
+    const imageGallery = document.querySelector('.image-gallery');
+    for (let i = 1; i <= 68; i++) {
+      const img = document.createElement('img');
+      img.src = `images/pic (${i}).jpg`;
+      img.alt = `Our memory ${i}`;
+      img.loading = 'lazy';
+      img.onclick = () => openModal(img.src);
+      imageGallery.appendChild(img);
+    }
+
+    // Open Modal
+    function openModal(src) {
+      document.getElementById("imageModal").style.display = "block";
+      document.getElementById("modalImg").src = src;
+    }
+
+    // Close Modal
+    function closeModal() {
+      document.getElementById("imageModal").style.display = "none";
+    }
+
+    // Load 36 videos
     const videoLinks = [
-      "1WS8ZtqWTvRTw6Y8IIKMt_AtXS6oC9uQz","11c5fposZYnDasiyiun60SBoFAjJOjt4y","1XE4_ZOgdbr5I5XEpSItJ78OifDd8cKCj",
-      "1q1q6zrkcFaTqhCE66IZ8vhwd-gboiz7G","1Xs-UGRXewmklkrSRceQd_PPl3zVHMm0U","1Le_fATlKCTSTzYwJLJN2xSxoElXdL2mt",
-      "1XGQ8YbLpcvW0fa7qVzGqVS-XpHp1hVp5","1LucIRbUAnoAQgWlk4dluQOu1DGNCPcFZ","1Zikzal03gW5EA9Z20o65nxPBawy8r5nt",
-      "1DyH5wkCTX1oq7yp1lujA55XDm6SEDTlJ","1851daWVcVdUPo7cXdr1W4aO2WLQLKP-e","1vrCZgSZ_1JowWr-Q2WV22yk92tEMLX9S",
-      "1VfxBZaQ6HvYHRgr8KqnWJbEr9hvW2wm2","1z8Tz2VRlCuK5r5UMjChnZviskusnzFgl","1GrOmO1uHcQBBEJ3tTO7dPBveqNm5DPym",
-      "1QkYp8bvobWMSqioCh3soWhcWFkz13y78","1j2XsTE-ijaUmAaNeBzLEbbdKd336Rryb","1WeIOy-D1cI2lwKemNKvMZVtyOptI0MF-",
-      "1H2kh0zvyGavA41Vf-rTc7U_tX0d5I2hw","1FIFZ0JyKbZHaDxW4MdeubIbvTSYZAv70","1eq_cRxyjfBpsdywkYzrDyRk1W5Mw76m8",
-      "1tzXJTjVoofLZc52TMR71SbCOMeneDxHQ","1tyHeaZ1CZ_UoFKRdTroX6TRjM-Np26fW","1WJlao2yJ3JZ-HmvjzWJzLllnHpobEAdb",
-      "1saXWaJoxsemyN_ajCWrvqcTAs4uBGOsS","10PkpHdbVMqiqMRNhGNkRoxEJWqeQacMv","1QWKMxdbcI7HRbmyOzbfNEBg2A5KzgDd4",
-      "13LekqlNpv6KjfD6jC6EF5Wu9pn2b02LQ","1UGCUb7xPpG0C74AQh7hf5Kb1A9BOFGid"
+      "1WS8ZtqWTvRTw6Y8IIKMt_AtXS6oC9uQz",
+      "11c5fposZYnDasiyiun60SBoFAjJOjt4y",
+      "1XE4_ZOgdbr5I5XEpSItJ78OifDd8cKCj",
+      "1q1q6zrkcFaTqhCE66IZ8vhwd-gboiz7G",
+      "1Xs-UGRXewmklkrSRceQd_PPl3zVHMm0U",
+      "1Le_fATlKCTSTzYwJLJN2xSxoElXdL2mt",
+      "1XGQ8YbLpcvW0fa7qVzGqVS-XpHp1hVp5",
+      "1LucIRbUAnoAQgWlk4dluQOu1DGNCPcFZ",
+      "1Zikzal03gW5EA9Z20o65nxPBawy8r5nt",
+      "1DyH5wkCTX1oq7yp1lujA55XDm6SEDTlJ",
+      "1851daWVcVdUPo7cXdr1W4aO2WLQLKP-e",
+      "1vrCZgSZ_1JowWr-Q2WV22yk92tEMLX9S",
+      "1VfxBZaQ6HvYHRgr8KqnWJbEr9hvW2wm2",
+      "1z8Tz2VRlCuK5r5UMjChnZviskusnzFgl",
+      "1GrOmO1uHcQBBEJ3tTO7dPBveqNm5DPym",
+      "1QkYp8bvobWMSqioCh3soWhcWFkz13y78",
+      "1j2XsTE-ijaUmAaNeBzLEbbdKd336Rryb",
+      "1WeIOy-D1cI2lwKemNKvMZVtyOptI0MF-",
+      "1H2kh0zvyGavA41Vf-rTc7U_tX0d5I2hw",
+      "1FIFZ0JyKbZHaDxW4MdeubIbvTSYZAv70",
+      "1eq_cRxyjfBpsdywkYzrDyRk1W5Mw76m8",
+      "1tzXJTjVoofLZc52TMR71SbCOMeneDxHQ",
+      "1tyHeaZ1CZ_UoFKRdTroX6TRjM-Np26fW",
+      "1WJlao2yJ3JZ-HmvjzWJzLllnHpobEAdb",
+      "1saXWaJoxsemyN_ajCWrvqcTAs4uBGOsS",
+      "10PkpHdbVMqiqMRNhGNkRoxEJWqeQacMv",
+      "1QWKMxdbcI7HRbmyOzbfNEBg2A5KzgDd4",
+      "13LekqlNpv6KjfD6jC6EF5Wu9pn2b02LQ",
+      "1UGCUb7xPpG0C74AQh7hf5Kb1A9BOFGid"
     ];
 
-    const videoGallery = document.getElementById('videoGallery');
-    videoLinks.forEach(linkId => {
-      const videoItem = document.createElement('div');
-      videoItem.className = 'video-item';
-      videoItem.innerHTML = `
-        <iframe src="https://drive.google.com/file/d/${linkId}/preview" allowfullscreen></iframe>
+    const videoGallery = document.getElementById("videoGallery");
+    videoLinks.forEach((id, index) => {
+      const title = videoTitles[index] || `Memory ${index + 1}`;
+      videoGallery.innerHTML += `
+        <div class="video-item">
+          <iframe src="https://drive.google.com/file/d/${id}/preview" allowfullscreen></iframe>
+          <p>${title}</p>
+        </div>
       `;
-      videoGallery.appendChild(videoItem);
     });
   </script>
 </body>
